--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,12 +1,10 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo
-  description: An example deployment of a Backstage application.
-  annotations:
-    github.com/project-slug: backstage/demo
+  name: cardservice
+  description: card-service
 spec:
-  type: website
+  type: microservice
   owner: backstage/maintainers
   lifecycle: experimental
   
