--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Domain
 metadata:
-  name: cardservice
-  description: Cards & Lending Domain
+  name: artists
+  description: Everything about artists
 spec:
   owner: artist-relations-team
